# brand-promotion-or-marketting-agent

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/agents/: crew.py
backend/app/api/: endpoints.py
backend/app/config/: settings.py
backend/app/database/: models.py  session.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: app.py  requirements.txt
