[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "crewai>=1.15.5",
    "fastapi>=0.139.2",
    "groq>=1.5.0",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.51.0",
]
